shared/src/test/data/yeast/invalid-json/incomplete-seq-3.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'key1'
Indicator           9,  2,  7 '\"'
EndScalar          10,  2,  8 ''
Indicator          10,  2,  8 ':'
WhiteSpace         11,  2,  9 ' '
BeginSequence      12,  2, 10 '['
LineBreak          13,  2, 11 '\n'
WhiteSpace         14,  3,  0 '    '
BeginScalar        18,  3,  4 ''
Indicator          18,  3,  4 '\"'
Text               19,  3,  5 'value1'
Indicator          25,  3, 11 '\"'
EndScalar          26,  3, 12 ''
Indicator          26,  3, 12 ','
LineBreak          27,  3, 13 '\n'
WhiteSpace         28,  4,  0 '    '
BeginScalar        32,  4,  4 ''
Indicator          32,  4,  4 '\"'
Text               33,  4,  5 'value2'
Indicator          39,  4, 11 '\"'
EndScalar          40,  4, 12 ''
LineBreak          40,  4, 12 '\n'
WhiteSpace         41,  5,  0 '    '
BeginScalar        45,  5,  4 ''
Indicator          45,  5,  4 '\"'
Text               46,  5,  5 'value3'
Indicator          52,  5, 11 '\"'
EndScalar          53,  5, 12 ''
LineBreak          53,  5, 12 '\n'
WhiteSpace         54,  6,  0 '  '
EndSequence        56,  6,  2 ']'
LineBreak          57,  6,  3 '\n'
EndMapping         58,  7,  0 '}'
